# LCSA

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  lcsa-mcp-wrapper
docs/: ARCHITECTURE.md  MOBILE_PLATFORM_STRATEGY.md  PLATFORM_CAPABILITY_MATRIX.md  VISUAL_GUIDE.md
lcsa-core/: Cargo.toml  README.md
lcsa-core/examples/: assistant_context_adapter.rs  clipboard_monitor.rs  context_live_view.rs  enveloped_clipboard_monitor.rs  mobile_policy_matrix.rs  runtime_capabilities.rs
lcsa-core/src/: capabilities.rs  context_api.rs  error.rs  event_bus.rs  filesystem.rs  lib.rs  mobile_policy.rs  permissions.rs  signals.rs  topology.rs
lcsa-core/src/platform/: clipboard.rs  linux_desktop.rs  macos_desktop.rs  mod.rs  windows_desktop.rs
lcsa-daemon/: Cargo.toml  README.md
lcsa-daemon/src/: lib.rs  main.rs
lcsa-mcp/: Cargo.toml  README.md
lcsa-mcp/src/: error.rs  lib.rs  main.rs  protocol.rs  resources.rs  server.rs  tools.rs
