[package]
name = "lcsa-daemon"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pranay1610/LCSA"
homepage = "https://github.com/pranay1610/LCSA"
documentation = "https://docs.rs/lcsa-daemon"
description = "JSONL adapter for LCSA filesystem semantics"
keywords = ["ai", "context", "filesystem", "jsonl", "signals"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lcsa-core = "0.1"
notify = "8.0"
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
